# fspb

./: .gitignore  .pre-commit-config.yaml  CHECKS.md  CLAUDE.md  README.md  fspb.Rproj  pyproject.toml
renv/: activate.R
sandbox/: dof_estimator_testing.ipynb
src/fspb/: __init__.py  bands.py  config.py  conformal_prediction.R  covariance.py  fair_algorithm.py  linear_model.py  min_width_algorithm.py  model_simulation.py  monte_carlo.py  plotting.py  process_monte_carlo_results.py  roughness.py  task_clean_application_data.py  task_monte_carlo_study.py  task_move_to_paper_dir.py  task_process_monte_carlo_results.py  task_process_simulation_results.py  task_produce_results_tables.py  task_simulation_study.py  task_visualize_application_outcomes.py  task_visualize_band.py  task_visualize_band_application.py  task_visualize_band_simulation.py  task_visualize_outcome.py  types.py
src/fspb/R/: conformal_prediction.R  functions.R  task_monte_carlo_study_R.py
src/fspb/application/: CovariatesReduced.csv  FRONT_V.csv  covariates.csv  outcomes.csv
src/fspb/bands/: band.py  covariance.py  critical_values.py  dof.py  fair_algorithm.py  linear_model.py  min_width_algorithm.py  roughness.py  stationary.py  visualize_bands.ipynb
src/fspb/notebook/: linear_model.ipynb  testing.ipynb
src/fspb/simulation/: model_simulation.py  processing.py  results_tables.py  simulation_study.py
tests/: test_bands.py  test_covariance.py  test_fair_algorithm.py  test_linear_model.py  test_model_simulation.py  test_roughness.py  test_types.py
tests/bands/: test_bands.py  test_covariance.py  test_critical_values.py  test_dof.py  test_fair_algorithm.py  test_linear_model.py  test_roughness.py
tests/simulation/: test_model_simulation.py
