[project]
authors = [{name = "Tim Mensinger", email = "mensingertim@gmail.com"}]
description = "Add a short description here"
name = "fspb"
requires-python = ">= 3.13"
version = "0.1.0"
dependencies = [
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
fspb = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "~=3.13"
matplotlib = ">=3.10.0,<4"
numpy = ">=2.2.3,<3"
scipy = ">=1.15.2,<2"
scikit-learn = ">=1.6.1,<2"
jupyterlab = ">=4.3.5,<5"
pandas = ">=2.2.3,<3"
pre-commit = ">=4.1.0,<5"
mypy = ">=1.15.0,<2"
scipy-stubs = ">=1.15.1.0,<2"
pytask = ">=0.5.2,<0.6"
joblib = ">=1.4.2,<2"
pandas-stubs = ">=2.2.3.250308,<3"


[tool.pytask.ini_options]
paths = ["./src/fspb"]

[tool.ruff]
target-version = "py313"
fix = true
unsafe-fixes = true

[[tool.mypy.overrides]]
module = ["joblib"]
ignore_missing_imports = true
