[project]
authors = [{name = "Tim Mensinger", email = "mensingertim@gmail.com"}]
description = "Add a short description here"
name = "fspb"
requires-python = ">= 3.13"
version = "0.1.0"
dependencies = [
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
fspb = { path = ".", editable = true }
pdbp = "*"

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "~=3.13"
matplotlib = ">=3.10.0,<4"
numpy = ">=2.2.3,<3"
scipy = ">=1.15.2,<2"
scikit-learn = ">=1.6.1,<2"
jupyterlab = ">=4.3.5,<5"
pandas = ">=2.2.3,<3"
pre-commit = ">=4.1.0,<5"
mypy = ">=1.15.0,<2"
scipy-stubs = ">=1.15.1.0,<2"
pytask = ">=0.5.2,<0.6"
joblib = ">=1.4.2,<2"
pandas-stubs = ">=2.2.3.250308,<3"
r-base = ">=4.4.3,<4.5"
r-languageserver = ">=0.3.16,<0.4"
r-rjson = ">=0.2.23,<0.3"
pytest = ">=8.3.5,<9"
tabulate = ">=0.9.0,<0.10"


[tool.pytask.ini_options]
paths = ["./src/fspb"]
pdbcls = "pdbp:Pdb"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--pdbcls=pdbp:Pdb"]

[tool.ruff]
target-version = "py313"
fix = true
unsafe-fixes = true

[tool.mypy]
files = ["src", "tests"]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true


[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false


[[tool.mypy.overrides]]
module = ["joblib", "sklearn.gaussian_process.kernels", "tests"]
ignore_missing_imports = true
