[project]
authors = [{name = "Tim Mensinger", email = "mensingertim@gmail.com"}]
description = "Add a short description here"
name = "fspb"
requires-python = ">= 3.13"
version = "0.1.0"
dependencies = [
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64"]

[tool.pixi.pypi-dependencies]
fspb = { path = ".", editable = true }
pdbp = "*"

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "~=3.13"
matplotlib = ">=3.10.0,<4"
numpy = ">=2.2.3,<3"
scipy = ">=1.15.2,<2"
scikit-learn = ">=1.6.1,<2"
jupyterlab = ">=4.3.5,<5"
pandas = ">=2.2.3,<3"
pre-commit = ">=4.1.0,<5"
mypy = "==1.17.0"
scipy-stubs = ">=1.15.1.0,<2"
pytask = ">=0.5.7,<0.6"
joblib = ">=1.4.2,<2"
pandas-stubs = ">=2.2.3.250308,<3"
r-languageserver = ">=0.3.16,<0.4"
r-rjson = ">=0.2.23,<0.3"
pytest = ">=8.3.5,<9"
tabulate = ">=0.9.0,<0.10"
jax = ">=0.5.2,<0.6"
optimagic = ">=0.5.1,<0.6"
cyipopt = ">=1.5.0,<2"
nlopt = ">=2.10.0,<3"
pytask-r = ">=0.4.1"
pytask-parallel = ">=0.5.1,<0.6"
r-fda = ">=6.3.0,<7"
r-future = ">=1.67.0,<2"
"r-future.apply" = ">=1.20.0,<2"
r-scales = ">=1.4.0,<2"
r-ggpubr = ">=0.6.1,<0.7"
r-ggnewscale = ">=0.5.2,<0.6"
r-ggplot2 = ">=4.0.0,<5"
r-remotes = ">=2.5.0,<3"


[tool.pytask.ini_options]
paths = ["./src/fspb"]
pdbcls = "pdbp:Pdb"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--pdbcls=pdbp:Pdb"]

[tool.ruff]
target-version = "py313"
fix = true
unsafe-fixes = true

[tool.mypy]
files = ["src", "tests"]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true


[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false


[[tool.mypy.overrides]]
module = ["joblib", "sklearn.gaussian_process.kernels", "tests"]
ignore_missing_imports = true
